Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBoolObjText.quorum
class Main
    action Main
        Boolean v
        v:SetValue(Test())
    end

    action Test() returns Boolean
        text var = "text"
        return var
    end
end